# utf8

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml
examples/: CMakeLists.txt  main.cpp
include/utf8/: algorithm.hpp  error.hpp  iterator.hpp  ranges.hpp  utf8.hpp  validation.hpp
src/: CMakeLists.txt
src/utf8/: CMakeLists.txt
src/utf8/include/utf8/: error.hpp  string.hpp  utf8.hpp  validation.hpp
src/utf8/include/utf8/detail/: validation.hpp
src/utf8/src/: utf8.cpp  validation.cpp  validation.hpp
tests/: CMakeLists.txt
tests/unit/: validation.cpp
